--- a/src/MainLayout/Home/home.css
+++ b/src/MainLayout/Home/home.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+.container {
+  width: 100%;
+}
+
 .banner1 .banner2,
 .banner3 {
   height: 100vh;
@@ -15,7 +19,8 @@
   left: 0;
 }
 
-.banner1 img {
+.banner1 .banner2,
+.banner3 img {
   width: 100%;
   /* content: ; */
   background-size: cover;
@@ -100,5 +105,63 @@
   }
   100% {
     visibility: visible;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .banner-text {
+    width: auto;
+    position: absolute;
+    top: 254px;
+    left: 15px;
+    color: #0e0d0d;
+  }
+  .banner1,
+  .banner2,
+  .banner3 {
+    height: 100vh;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .banner1 .banner2,
+  .banner3 img {
+    /* width: 100%;
+    background-size: cover;
+    object-fit: cover;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%); */
+  }
+}
+
+@media (min-width: 481px) and (max-width: 790px) {
+  .banner-text {
+    width: auto;
+    position: absolute;
+    top: 254px;
+    left: 51px;
+    color: #0e0d0d;
+  }
+  .banner1,
+  .banner2,
+  .banner3 {
+    height: 100vh;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .banner1 .banner2,
+  .banner3 img {
+    /* width: 100%;
+    background-size: cover;
+    object-fit: cover;
+    position: absolute; */
+    /* left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%); */
   }
 }
