--- a/src/MainLayout/Home/home.css
+++ b/src/MainLayout/Home/home.css
@@ -19,22 +19,23 @@
   left: 0;
 }
 
-.banner1 .banner2,
+.banner1,
+.banner2,
 .banner3 img {
   width: 100%;
   /* content: ; */
   background-size: cover;
   object-fit: cover;
   position: absolute;
-  left: 50%;
+  /* left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
 }
 
 .banner-text {
   width: 600px;
   position: absolute;
-  top: 200px;
+  top: 350px;
   left: 100px;
   color: #fff;
 }
@@ -113,7 +114,7 @@
     width: auto;
     position: absolute;
     top: 254px;
-    left: 15px;
+    left: 16px;
     color: #0e0d0d;
   }
   .banner1,
