--- a/src/MainLayout/Navbar/navbar.css
+++ b/src/MainLayout/Navbar/navbar.css
@@ -1,6 +1,6 @@
 nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   align-items: center;
   left: 0;
@@ -8,26 +8,37 @@ nav {
   width: 100%;
   z-index: 1;
   transition: 0.6 ease-in-out;
-  /* height: 80px; */
-  background: transparent !important;
+  height: 80px;
+  background: transparent;
   /* background-color: aqua; */
   position: fixed;
 }
 
-.logo-heading img {
-  width: 150px;
-  margin-top: 20px;
+.nav-active {
+  box-shadow: 5px 10px 20px #f4b124;
+  /* background-color: #fd7e14; */
+  background-color: #fd7e14;
 }
 
+.logo-heading img {
+  width: 150px;
+  margin-top: 58px;
+}
+.scroll-menu > li,
+.scroll-menu > a {
+  display: inline-block;
+}
 .menu > li,
 .menu > a {
   display: inline-block;
 }
 
-.menu li {
+.menu li,
+.scroll-menu li {
   position: relative;
 }
-.menu a {
+.menu a,
+.scroll-menu a {
   font-size: 15px;
   display: block;
   padding: 10px 2rem;
@@ -35,15 +46,30 @@ nav {
   color: #fff;
 }
 
-.active {
+.menu .active {
   background-color: #f4b124;
+  /* font-size: 20px; */
+  margin: 34px;
+}
+.scroll-menu .active {
+  background-color: #ec1839;
   /* font-size: 20px; */
   margin: 34px;
 }
 .menu a:hover {
   background-color: #f4b124;
   color: #fff;
+  box-shadow: 5px 10px 30px rgba(2, 238, 255, 0.336);
+  transition: all ease 0.2s;
 }
+
+.scroll-menu a:hover {
+  background-color: #ec1839;
+  color: #ffffff;
+  box-shadow: 5px 10px 30px rgba(2, 238, 255, 0.336);
+  transition: all ease 0.2s;
+}
+
 .submenu {
   margin-top: 30px;
   position: absolute;
