--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,11 @@ body {
 ul,
 li {
   list-style: none;
+  margin: 0;
+  padding: 0;
+}
+a {
+  text-decoration: none;
 }
 /* .....................Main.............................. */
 img {
