--- a/src/MainLayout/Abouts_us/about.css
+++ b/src/MainLayout/Abouts_us/about.css
@@ -1,12 +1,110 @@
-/* #aboutus {
+#aboutus {
   margin-top: 50px;
-} */
+}
 
-/* .row {
-  display: flex !important;
-  justify-content: space-around;
-} */
-.image-section img {
-  width: 200px;
-  border-radius: 100%;
+.section {
+  margin: 0%;
+  padding: 0%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.slider {
+  width: 800px;
+  height: 500px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.slide {
+  width: 500%;
+  height: 500%;
+  display: flex;
+}
+
+.slide input {
+  display: none;
+}
+
+.st {
+  width: 20%;
+  transition: 2s;
+}
+
+.st img {
+  width: 800px;
+  height: 500px;
+}
+
+.nav-m {
+  position: absolute;
+  width: 800px;
+  margin-top: -40px;
+  justify-content: center;
+  display: flex;
+}
+
+.m-btn {
+  border: 2px solid orange;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 1s;
+}
+
+.m-btn:not(:last-child) {
+  margin-right: 30px;
+}
+
+.m-btn:hover {
+  background-color: orange;
+}
+
+#radio1:checked ~ .first {
+  margin-left: 0%;
+}
+#radio2:checked ~ .first {
+  margin-left: -20%;
+}
+#radio3:checked ~ .first {
+  margin-left: -40%;
+}
+#radio4:checked ~ .first {
+  margin-left: -60%;
+}
+
+.nav-auto {
+  position: absolute;
+  width: 800px;
+  margin-top: 460px;
+  display: flex;
+  justify-content: center;
+}
+
+.nav-auto div {
+  border: 2px solid orange;
+  padding: 5px;
+  border-radius: 10px;
+  transition: 1s;
+}
+
+.nav-auto div:not(:last-child) {
+  margin-right: 30px;
+  justify-content: center;
+}
+
+#radio1:checked ~ .nav-auto .a-b1 {
+  background-color: orange;
+}
+#radio2:checked ~ .nav-auto .a-b2 {
+  background-color: orange;
+}
+
+#radio3:checked ~ .nav-auto .a-b3 {
+  background-color: orange;
+}
+
+#radio4:checked ~ .nav-auto .a-b4 {
+  background-color: orange;
 }
