--- a/src/MainLayout/Abouts_us/about.css
+++ b/src/MainLayout/Abouts_us/about.css
@@ -1,5 +1,6 @@
 #aboutus {
   margin-top: 50px;
+  /* height: 100vh; */
 }
 
 .section {
@@ -11,15 +12,15 @@
 }
 
 .slider {
-  width: 800px;
-  height: 500px;
+  margin: 10px 190px;
+  height: 320px;
   border-radius: 10px;
   overflow: hidden;
 }
 
 .slide {
   width: 500%;
-  height: 500%;
+  /* height: 500%; */
   display: flex;
 }
 
@@ -32,15 +33,15 @@
   transition: 2s;
 }
 
-.st img {
-  width: 800px;
+/* .st img {
+  width: 950px;
   height: 500px;
-}
+} */
 
 .nav-m {
   position: absolute;
   width: 800px;
-  margin-top: -40px;
+  margin-top: -95px;
   justify-content: center;
   display: flex;
 }
@@ -77,7 +78,7 @@
 .nav-auto {
   position: absolute;
   width: 800px;
-  margin-top: 460px;
+  margin-top: 400px;
   display: flex;
   justify-content: center;
 }
@@ -107,4 +108,129 @@
 
 #radio4:checked ~ .nav-auto .a-b4 {
   background-color: orange;
+}
+
+.program-slide {
+  display: flex;
+  justify-content: space-around;
+}
+
+.image-section img {
+  border-radius: 50%;
+  width: 320px;
+  height: 320px;
+  border: 13px solid rgb(219, 131, 8);
+  box-shadow: #333;
+  /* margin: 10px; */
+}
+
+.program-button {
+  background-color: #f4b124;
+  transition: 0.2s ease-in-out;
+  /* border: 2px solid #f4b124; */
+  /* border-radius: 17px; */
+  cursor: pointer;
+  padding: 10px 15px;
+  width: 250px;
+  margin-top: 20px;
+  color: black;
+  font-size: 20px;
+}
+
+.program-button span {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.program-button:hover {
+  color: white;
+  background-color: rgb(255, 94, 0);
+}
+.img-desc {
+  margin-left: 40px;
+  margin-top: 64px;
+  text-align: start;
+}
+
+.slide-title h2 {
+  color: #504e70;
+  text-align: left;
+  font-weight: 800 !important;
+  /* font-family: ui-monospace; */
+  font-size: 35px;
+  margin-top: -50px;
+}
+.slide-desc {
+  font-weight: 500;
+  font-size: larger;
+  font-size: 20px;
+  font-family: Poppins, sans-serif;
+  margin-top: 10px;
+  margin-bottom: 40px;
+  text-align: left;
+  color: #504e70;
+}
+
+@media (min-width: 791px) and (max-width: 1245px) {
+  #aboutus {
+    margin-top: 50px;
+    height: 65vh;
+  }
+  .slider {
+    margin: 10px 0px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  #aboutus {
+    margin-top: 50px;
+    /* height: 60vh; */
+  }
+  .slider {
+    margin: 10px 10px;
+
+    height: 633px;
+  }
+
+  .program-slide {
+    display: block;
+  }
+  .image-section img {
+    margin-left: 28px;
+  }
+  .img-desc {
+    margin-left: 18px;
+    margin-top: 60px;
+    text-align: start;
+  }
+  .slide-title h2 {
+    font-size: 22px;
+    text-align: center;
+  }
+  .slide-desc {
+    font-size: 16px;
+    text-align: center;
+  }
+  .program-button {
+    margin-left: 120px;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 790px) {
+  #aboutus {
+    margin-top: 50px;
+    /* height: 60vh; */
+  }
+  .slider {
+    margin: 10px 10px;
+
+    height: 985px;
+  }
+
+  .program-slide {
+    display: block;
+  }
+  .image-section img {
+    margin-left: 46px;
+  }
 }
