--- a/src/MainLayout/Programs/program.css
+++ b/src/MainLayout/Programs/program.css
@@ -1,4 +1,4 @@
-#programs {
+/* #programs {
   margin: 30px 0 0 0;
   flex: 0 0 100%;
 }
@@ -19,12 +19,11 @@
   height: 350px;
   border: 13px solid #e2860d;
   box-shadow: #333;
-  /* margin: 10px; */
 }
 .program-button {
   background-color: #f4b124;
   transition: 0.2s ease-in-out;
-  /* border: 2px solid #f4b124; */
+
   border-radius: 17px;
   cursor: pointer;
   padding: 10px 15px;
@@ -42,8 +41,6 @@
   text-align: left;
   font-weight: 800 !important;
   font-family: ui-monospace;
-
-  /* fo */
 }
 .slide-desc {
   font-weight: 200;
@@ -55,8 +52,6 @@
 @media (min-width: 791px) and (max-width: 1245px) {
   .img-desc {
     margin-left: 11px;
-    /* margin-top: 28px;
-    text-align: start; */
   }
 }
 @media (min-width: 320px) and (max-width: 480px) {
@@ -87,4 +82,4 @@
     margin-top: 28px;
     text-align: start;
   }
-}
+} */
