--- a/src/MainLayout/Programs/program.css
+++ b/src/MainLayout/Programs/program.css
@@ -1,85 +1,54 @@
-/* #programs {
-  margin: 30px 0 0 0;
-  flex: 0 0 100%;
-}
-.carosoul {
-  margin: 0%;
+svg {
+  width: 300px;
+  height: 300px;
+
+  transform: rotate(-90deg);
+  overflow: initial;
 }
 
-.carosoul-section {
-  margin: 20px 120px;
+circle {
+  stroke-width: 20px;
+  fill: none;
 }
-.carousel-inner {
-  height: 500px;
+circle:nth-child(1) {
+  stroke: #fff;
+}
+circle:nth-child(2) {
+  stroke: #f00;
+  position: relative;
+  z-index: 1;
 }
 
-.image-section img {
+.circle_box:nth-child(1) circle:nth-child(2) {
+  stroke-dashoffset: calc(100 * 6);
+  stroke-dasharray: calc(100 * 5);
+  stroke-dashoffset: calc((100 * 8) - ((100 * 4) * 50) / 100);
+  stroke: #00f;
+}
+.circle_box {
+  font-size: 36px;
+  color: #fff;
+  text-align: center;
+}
+.circle_box div {
+  position: relative;
+}
+.circle_box span {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 40px;
+}
+
+.circle_box span img {
+  width: 262px;
+  height: 262px;
+  border: 2px solid white;
   border-radius: 50%;
-  width: 350px;
-  height: 350px;
-  border: 13px solid #e2860d;
-  box-shadow: #333;
-}
-.program-button {
-  background-color: #f4b124;
-  transition: 0.2s ease-in-out;
-
-  border-radius: 17px;
-  cursor: pointer;
-  padding: 10px 15px;
-  width: 250px;
 }
 
-.img-desc {
-  margin-left: -90px;
-  margin-top: 64px;
-  text-align: start;
+.circle_box:hover circle {
+  stroke: #00f;
 }
-
-.slide-title h2 {
-  color: #333 !important;
-  text-align: left;
-  font-weight: 800 !important;
-  font-family: ui-monospace;
-}
-.slide-desc {
-  font-weight: 200;
-  font-size: larger;
-  font-size: 25px;
-  font-family: "math";
-}
-
-@media (min-width: 791px) and (max-width: 1245px) {
-  .img-desc {
-    margin-left: 11px;
-  }
-}
-@media (min-width: 320px) and (max-width: 480px) {
-  .carosoul-section {
-    margin: 10px 0px;
-  }
-  .image-section img {
-    border-radius: 50%;
-    width: 280px;
-    height: 280px;
-  }
-  .img-desc {
-    margin-left: 20px;
-    margin-top: 28px;
-    text-align: start;
-  }
-}
-
-@media (min-width: 481px) and (max-width: 790px) {
-  .carosoul-section {
-    margin: 20px 30px;
-  }
-  .image-section img {
-    border-radius: 50%;
-  }
-  .img-desc {
-    margin-left: 20px;
-    margin-top: 28px;
-    text-align: start;
-  }
-} */
