--- a/src/MainLayout/Home/home.css
+++ b/src/MainLayout/Home/home.css
@@ -5,6 +5,17 @@
   height: 100vh;
 }
 
+.reveal {
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: all 2s ease;
+}
+
+.reveal.active {
+  transform: translateY(0);
+  opacity: 1;
+}
 .container {
   width: 100%;
 }
