--- a/src/MainLayout/Visions/vision.css
+++ b/src/MainLayout/Visions/vision.css
@@ -41,7 +41,7 @@
 .vision-images {
   display: flex;
   justify-content: space-evenly;
-  margin: 100px 100px;
+  margin: 50px 100px;
   gap: 20px;
   position: relative;
 }
@@ -80,7 +80,7 @@
   position: absolute;
   background: transparent;
   top: 220px;
-  display: none;
+  visibility: hidden;
   width: 240px;
   left: 5px;
   transition: all 0.6s ease;
@@ -91,17 +91,18 @@
 .type-text {
   width: 240px;
   margin-top: 10px;
-  display: none;
+  visibility: hidden;
 }
-.vision-type :hover ~ .type-header {
-  display: block;
+.vision-images :hover ~ .type-header {
+  visibility: visible;
   color: #fff;
   background: rgb(228 112 29 / 81%);
-
+  transition: all 0.6s ease;
   height: 21%;
 }
 .vision-type :hover ~ .type-text {
-  display: block;
+  visibility: visible;
+  transition: all 0.6s ease;
 
   /* display: contents; */
 }
