--- a/src/MainLayout/Navbar/navbar.css
+++ b/src/MainLayout/Navbar/navbar.css
@@ -9,7 +9,7 @@ nav {
   z-index: 1;
   transition: 0.6 ease-in-out;
   height: 80px;
-  background: transparent;
+  /* background: transparent; */
   /* background-color: aqua; */
   position: fixed;
 }
