--- a/src/MainLayout/Abouts_us/OurMission/mission.css
+++ b/src/MainLayout/Abouts_us/OurMission/mission.css
@@ -126,7 +126,7 @@ table {
 
 .actual-table {
   position: absolute;
-  top: -13.5px;
+  top: -6.5px;
   left: 15%;
   padding: 5px;
   width: 70%;
@@ -232,3 +232,78 @@ table {
 .border-0 {
   border: 0 !important;
 }
+
+/* ........................................Our Diffrence............................................... */
+
+.swarajy-diff-container {
+  position: relative;
+  padding: 4rem 0;
+  color: #fff;
+}
+
+.section-background-block {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.swarajy-diff-container:before {
+  position: absolute;
+  z-index: 9;
+  inset: 0;
+  width: 100%;
+  content: "";
+  height: 100%;
+  background-color: rgba(0, 78, 126, 0.8);
+}
+.diff-background-img {
+  background-image: url("../../../assets/diff_background.jpg");
+  width: 100%;
+  height: 100;
+  background-size: cover;
+  background-position: 50% 0;
+}
+
+.diff-text-box {
+  position: relative;
+  z-index: 99;
+}
+
+.diff-text-box {
+  display: flex;
+
+  max-width: 1240px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.diff-text-row {
+  text-align: center;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+.padding-20 {
+  padding-top: 10px;
+  /* padding-bottom: 30px; */
+}
+
+.diff-text-row h2 {
+  font-weight: 700;
+  font-size: 2.3rem;
+  font-family: "Fira Sans Condensed", sans-serif;
+}
+
+.diff-text-row p {
+  font-weight: 300;
+  font-size: 1.2rem;
+  /* font-family: "Fira Sans Condensed", sans-serif; */
+}
+/*  */
