--- a/src/MainLayout/Navbar/navbar.css
+++ b/src/MainLayout/Navbar/navbar.css
@@ -202,7 +202,9 @@ nav {
     color: #fff;
   }
   .menu li:hover > .submenu {
-    top: -4px;
+    position: relative;
+    top: 0;
+    left: 3px;
     opacity: 1;
     display: block;
     /* background-color: #004e7e; */
