--- a/src/MainLayout/Components/banner.css
+++ b/src/MainLayout/Components/banner.css
@@ -64,6 +64,10 @@
     /* width: 140%; */
   }
 
+  .front-view-container {
+    top: 75%;
+  }
+
   .front-view-container .row {
     display: inline-block;
   }
