--- a/src/MainLayout/Abouts_us/About_Us/about.css
+++ b/src/MainLayout/Abouts_us/About_Us/about.css
@@ -1,3 +1,147 @@
 #aboutus {
   /* margin-top: 50px; */
 }
+
+.contenr-1200 {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* s------------------------ection2-------------------------------- */
+.about-us-container {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  font-family: "Nunito Sans", sans-serif !important;
+}
+
+.about-us-info {
+  margin: 5px 15px;
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+
+.about-us-content {
+  margin: 5px 15px;
+}
+.about-us-info h2 {
+  font-weight: 800;
+  font-family: "Quicksand", sans-serif !important;
+  line-height: 50px;
+  margin-bottom: 30px;
+  font-size: 50px;
+  color: rgb(0, 78, 126);
+}
+/*         */
+.about-us-info p {
+  /* font-family: "Nunito Sans", sans-serif; */
+  font-family: Poppins, sans-serif;
+  color: #504e70;
+  font-weight: 500;
+  line-height: 27px;
+  font-size: 18px;
+  letter-spacing: 1px;
+}
+
+/* -----------------------------Section3---------------------------------- */
+.about-us-with-image {
+  position: relative;
+  padding: 4rem 0;
+  color: #fff;
+}
+
+.about-us-with-image:before {
+  position: absolute;
+  z-index: 9;
+  inset: 0;
+  width: 100%;
+  content: "";
+  height: 100%;
+  background-color: rgba(0, 78, 126, 0.5);
+}
+
+.about-us-with-image .bg-image {
+  background-image: url("../../../assets/middle-banner-about.jpg");
+  width: 100%;
+  height: 100;
+  background-size: cover;
+  background-position: 50% 0;
+}
+
+/* ==============section 4==================== */
+
+.about-us-values {
+  position: relative;
+}
+.div-mid-header {
+  text-align: center;
+  position: absolute;
+  left: 42%;
+  top: 50%;
+}
+.div-mid-header h2 {
+  color: #fff;
+
+  font-weight: 900;
+  font-family: "Quicksand", sans-serif !important;
+  line-height: 50px;
+
+  font-size: 30px;
+}
+.width25 {
+  width: 30% !important;
+}
+.div-mid-header-mob {
+  display: none;
+}
+
+.values-row {
+  display: flex;
+}
+
+.values-row .values {
+  text-align: center;
+}
+
+.values img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+
+.core-val-about {
+  /* position: absolute; */
+  /* top: 67%; */
+}
+@media (min-width: 320px) and (max-width: 480px) {
+  .about-us-container {
+    display: inline-block;
+  }
+  .about-us-info {
+    max-width: 100%;
+  }
+  .div-mid-header {
+    display: none;
+  }
+  .div-mid-header-mob {
+    display: contents;
+    text-align: center;
+  }
+
+  .div-mid-header-mob h2 {
+    font-weight: 800;
+    font-family: "Quicksand", sans-serif !important;
+    line-height: 50px;
+    margin-bottom: 30px;
+    font-size: 40px;
+    color: rgb(0, 78, 126);
+  }
+}
+
+@media (min-width: 481px) and (max-width: 790px) {
+}
