--- a/src/MainLayout/Abouts_us/About_Us/about.css
+++ b/src/MainLayout/Abouts_us/About_Us/about.css
@@ -77,13 +77,13 @@
 
 .about-us-values {
   position: relative;
-  height: 100vh;
+  height: 120vh;
 }
 .div-mid-header {
   text-align: center;
   position: absolute;
   left: 42%;
-  top: 50%;
+  top: 45%;
 }
 .div-mid-header h2 {
   color: #fff;
@@ -102,6 +102,13 @@
   display: none;
 }
 
+.core-val-about {
+  position: absolute;
+  top: 55%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .values-row {
   display: flex;
   gap: 10px;
@@ -113,25 +120,55 @@
   flex: 1;
 }
 
-.values img {
+.values .image {
   width: 120px;
   height: 120px;
+  overflow: hidden;
   border-radius: 50%;
-  background-color: aliceblue;
   padding: 15px;
+  margin: 0 auto 1rem;
+  background-color: #f0eceb;
+  border: 2px solid transparent;
+  display: flex;
+}
+
+.values .image:hover {
+  background-color: rgb(6, 88, 140);
+}
+
+.values .image:hover .vals-img {
+  filter: brightness(0) invert(1);
+}
+
+.values .image:hover ~ h2 {
+  color: orangered;
+}
+.values .image img {
+  object-fit: fill;
+  max-width: 100%;
+  height: auto;
+}
+
+.vals-img {
+  transition: filter 0.3s ease;
 }
 
 .values h2 {
   margin: 15px auto 15px auto;
+  font-weight: 800;
+
+  font-family: "Quicksand", sans-serif !important;
+  line-height: 50px;
+  margin-bottom: 30px;
+  /* font-size: 50px; */
+  transition: filter 0.3s ease;
+  color: rgb(0, 78, 126);
 }
 .values p {
   margin: 15px auto 15px auto;
-}
-.core-val-about {
-  position: absolute;
-  top: 67%;
-  margin-left: auto;
-  margin-right: auto;
+  font-family: Poppins, sans-serif;
+  color: #504e70;
+  font-weight: 500;
 }
 
 .core-val-about .row {
@@ -161,6 +198,16 @@
     margin-bottom: 30px;
     font-size: 40px;
     color: rgb(0, 78, 126);
+  }
+
+  .about-us-values {
+    height: auto;
+  }
+  .core-val-about {
+    position: relative;
+  }
+  .values-row {
+    display: inline;
   }
 }
 
