--- a/src/MainLayout/Abouts_us/OurMission/mission.css
+++ b/src/MainLayout/Abouts_us/OurMission/mission.css
@@ -47,12 +47,12 @@
   padding: 10px;
 }
 .heading-text p {
+  margin: 15px auto 15px auto;
+  font-family: Poppins, sans-serif;
+  color: #504e70;
+  font-weight: 500;
   text-align: center;
-  /* font-family: "Merriweather", serif !important; */
   font-size: 18px;
-  font-weight: 400;
-  /* line-height: 1.8; */
-  color: #333;
 }
 
 .table-bg {
@@ -292,9 +292,12 @@ table {
 }
 
 .miss-progr-level-heading p {
-  font-family: "Fira Sans Condensed", sans-serif !important;
-  font-size: 1.5rem;
-  color: #333;
+  margin: 15px auto 15px auto;
+  font-family: Poppins, sans-serif;
+  color: #504e70;
+  font-weight: 500;
+  text-align: center;
+  font-size: 25px;
 }
 
 .miss-progr-level-heading {
@@ -335,10 +338,12 @@ table {
 }
 
 .program-content p {
-  font-weight: 400;
-  font-family: "Fira Sans Condensed", sans-serif !important;
-  font-size: 1.3rem;
-  color: #333;
+  margin: 15px auto 15px auto;
+  font-family: Poppins, sans-serif;
+  color: #504e70;
+  font-weight: 500;
+  text-align: center;
+  font-size: 18px;
 }
 
 /*.................................... mission-image-last-background...................................... */
