--- a/src/MainLayout/Abouts_us/Our_Team/team.css
+++ b/src/MainLayout/Abouts_us/Our_Team/team.css
@@ -1,8 +1,9 @@
 .team-container {
-  width: 1200px;
+  max-width: 1200px;
   margin-right: auto;
   margin-left: auto;
   margin-top: 50px;
+  margin-bottom: 18px;
 }
 
 .padd-28 {
@@ -13,31 +14,34 @@
 .team-nav ul {
   display: flex;
   gap: 30px;
+  position: relative;
 }
 
-.notActive {
+.notActive span {
   font-family: "Quicksand", sans-serif !important;
   line-height: 50px;
   /* margin-bottom: 30px; */
   color: #504e70;
-  font-weight: 800;
+  font-weight: 500;
   padding: 10px;
   font-size: 18px;
+  cursor: pointer;
 }
 
-.active-team {
+.active-team span {
   font-weight: 800 !important;
   font-family: "Quicksand", sans-serif !important;
   line-height: 50px;
   padding: 10px;
   /* margin-bottom: 30px; */
+  font-size: 25px;
   text-decoration: underline;
   text-underline-offset: 0.5em;
   color: rgb(0, 78, 126) !important;
 }
 
 .team-desc {
-  width: 1200px;
+  max-width: 1200px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -106,4 +110,29 @@
   font-weight: 500;
   font-size: 18px;
   margin: 7px 0;
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .team-nav ul {
+    gap: 0;
+  }
+  .padd-28 {
+    padding: auto;
+  }
+  .notActive span {
+    line-height: normal;
+  }
+  .active-team span {
+    line-height: normal;
+    text-decoration: none;
+  }
+  .team-desc {
+    width: auto;
+  }
+  .team-grid {
+    display: inline-table;
+  }
+  .memberName {
+    margin-top: 40px;
+  }
 }
