--- a/src/MainLayout/Our_Work/Work/work.css
+++ b/src/MainLayout/Our_Work/Work/work.css
@@ -13,10 +13,10 @@
 }
 
 .work-info-heading h4 {
-  font-family: "Quicksand", sans-serif !important;
+  font-family: auto;
   margin: 15px auto 15px auto;
   font-weight: 800;
-  font-size: 30px;
+  font-size: 40px;
   transition: filter 0.3s ease;
   color: rgb(0, 78, 126);
   text-align: start;
@@ -54,16 +54,90 @@
   flex: 40%;
 }
 
-.block {
-  padding: 20px 40px;
+.touching-lives h2 {
   text-align: center;
+  margin: 25px auto 25px auto;
+  font-weight: 700;
+
+  line-height: 50px;
+
+  font-size: 50px;
+  transition: filter 0.3s ease;
+  color: rgb(0, 78, 126);
+  text-align: center;
+}
+
+.block {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+  text-align: center;
+  background-color: #e4701d;
+  color: #fff;
 }
 
 .block h2 {
   margin-bottom: 10px;
+  font-size: 30px;
+}
+
+.block p {
+  font-size: 18px;
 }
 
 .block-goal {
-  margin: 0px 40px;
+  margin: 20px 40px 0 40px;
   text-align: center;
+  font-size: 18px;
+}
+
+.work-poster img {
+  padding: 0 60px;
+}
+
+.blogs {
+  margin: 0 15px;
+  display: grid;
+  gap: 30px;
+}
+
+.blogs .blog {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.blog-image {
+  flex: 45%;
+}
+
+.blog-desc {
+  flex: 50%;
+  padding: 0 15px;
+}
+
+.blog-desc .blog-type {
+  font-size: 20px;
+  font-family: auto;
+}
+
+.blog-desc .blog-header {
+  font-weight: 700;
+
+  line-height: 40px;
+  font-size: 30px;
+  font-family: auto;
+  color: rgb(0, 78, 126);
+  margin-bottom: 10px;
+}
+
+.blog-story p {
+  /* margin: 15px auto 15px auto; */
+  font-family: Poppins, sans-serif;
+  color: #504e70;
+  font-weight: 500;
+
+  line-height: 30px;
+  font-size: 18px;
 }
